--- a/app/src/main/res/layout/about_layout.xml
+++ b/app/src/main/res/layout/about_layout.xml
@@ -1,67 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@android:color/white"
-    android:orientation="vertical" android:layout_width="match_parent"
     android:gravity="center|top"
-    android:layout_height="match_parent">
+    android:orientation="vertical">
 
-    <include layout="@layout/base_toolbar"/>
+    <include layout="@layout/base_toolbar" />
 
     <ImageView
         android:id="@+id/aboutImageView"
-        android:scaleType="centerCrop"
-        android:src="@mipmap/ic_launcher"
-        android:layout_marginTop="50dp"
         android:layout_width="100dp"
-        android:layout_height="100dp" />
+        android:layout_height="100dp"
+        android:layout_marginTop="50dp"
+        android:scaleType="centerCrop"
+        android:src="@mipmap/ic_launcher" />
 
     <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
         android:text="@string/app_name"
         android:textColor="@color/secondary_text"
-        android:gravity="center"
-        android:textSize="24sp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:textSize="24sp" />
+
     <TextView
         android:id="@+id/aboutVersionTextView"
-        android:text="@string/app_version"
-        android:layout_marginTop="4dp"
-        android:textColor="@color/secondary_text"
-        android:gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:gravity="center"
+        android:text="@string/app_version"
+        android:textColor="@color/secondary_text" />
 
     <TextView
-        android:textSize="20sp"
-        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:gravity="center"
         android:text="@string/made_by"
         android:textColor="@color/secondary_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:textSize="20sp" />
 
     <TextView
-        android:textSize="16sp"
-        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
+        android:gravity="center"
         android:text="@string/contact_me"
         android:textColor="@color/secondary_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:textSize="16sp" />
 
     <TextView
-        android:textSize="16sp"
-        android:gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:autoLink="email"
+        android:gravity="center"
         android:linksClickable="true"
         android:text="@string/email_address"
         android:textColor="@color/secondary_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-
-
+        android:textSize="16sp" />
 
 
 </LinearLayout>
